2.5.3 (22.05.2019):

* Split up gimp messages to allow them to be ignored more easily


2.5.2 (22.04.2019):

* Allow translations for message types in multiple message window
* Improve progress message whilst analysing pages
* Don't reapply scan options after reload if setting returned SANE_INFO_INEXACT
* Decode UTF-8 in font names for PDFs in save dialog
* Wait for processes to finish to prevent zombies. Closes Debian bug #926634
  (Delays opening dialogs, possibly related to defunct fc-list process)
* Fix warning message about pdftk (again).
  Closes bug #320 (Error message on startup: pdftk can't use /tmp)
* Rename dpi->ppi (again) and us->μs
* Update to Hungarian translation (thanks to csola)
* Update to Czech translation (thanks to Pavel Borecki)


2.5.1 (23.03.2019):

* Fix warning message about pdftk
* Update to Hungarian translation (thanks to csola)


2.5.0 (22.03.2019):

* Really optionally change the djvu access and modification times to the
  metadata date.
* Optionally encrypt PDFs.
* Fix race condition when cancelling job.
  Closes bug #317 (cancel tests randomly hang)
* Fix bug causing Edit/Select/Blank only to work on second attempt
* Fix bug where toolbar crop always operates on first page
* Update to Hungarian translation (thanks to csola)
* Update to German translation (thanks to Martin Butter)
* Update to Italian translation (thanks to Albano Battistella)
* Update to Ukranian translation (thanks to Yuri Chornoivan)


2.4.0 (24.02.2019):

* Offer to switch from Facing to Reverse after scanning double-sided pages.
  Closes feature request #100
* + Edit profile functionality to scan dialog.
* Reset scan options to defaults before applying profile
* + Split screen view for image and OCR output.
  Closes feature request #57 (Ability to view OCR output and Image at same time)
* Switched to GIMP-like controls - LMB for selecting and MMB for panning.
* + crop to toolbar and RMB menus
* Fix saving as TIFF G3/4 if image not depth 1